Task #12: Init Activity
