# app/Http/Resources/ActivityResource.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class ActivityResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+     */
+    public function toArray($request)
+    {
+        return [
+            'uuid' => $this->uuid,
+            'user_uuid' => $this->user_uuid,
+            'entity_uuid' => $this->entity_uuid,
+            'device' => $this->device,
+            'ip' => $this->ip,
+            'description' => $this->description,
+            'status' => $this->status
+        ];
+    }
+}
