# app/Models/API/Activity.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Models\API;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use App\Traits\TraitUuid;
+
+class Activity extends Model
+{
+    use HasFactory, TraitUuid;
+
+    protected $fillable = ['user_uuid', 'entity_uuid', 'device', 'ip', 'description', 'status'];
+}
